--- a/DrawingAppGucci/DrawingApp/Source/Canvas/View/Base.lproj/Main.storyboard
+++ b/DrawingAppGucci/DrawingApp/Source/Canvas/View/Base.lproj/Main.storyboard
@@ -77,7 +77,7 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="20" id="KRL-fB-AX6"/>
-                                                                    <constraint firstAttribute="width" constant="20" id="cba-wq-Unw"/>
+                                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="20" id="cba-wq-Unw"/>
                                                                 </constraints>
                                                                 <color key="tintColor" systemColor="systemGrayColor"/>
                                                                 <state key="normal" title="Button"/>
@@ -89,7 +89,6 @@
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v0v-fv-HR2">
                                                                 <rect key="frame" x="0.0" y="20" width="20" height="20"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="width" constant="20" id="cRF-qV-axb"/>
                                                                     <constraint firstAttribute="height" constant="20" id="i2U-Os-Pko"/>
                                                                 </constraints>
                                                                 <color key="tintColor" systemColor="systemGrayColor"/>
@@ -131,7 +130,7 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="20" id="G6q-yP-99s"/>
-                                                                    <constraint firstAttribute="width" constant="20" id="hGd-Gm-V2F"/>
+                                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="20" id="hGd-Gm-V2F"/>
                                                                 </constraints>
                                                                 <color key="tintColor" systemColor="systemGrayColor"/>
                                                                 <state key="normal" title="Button"/>
@@ -144,7 +143,7 @@
                                                                 <rect key="frame" x="0.0" y="20" width="20" height="20"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="20" id="cJh-eX-nCd"/>
-                                                                    <constraint firstAttribute="width" constant="20" id="qMj-NH-WBJ"/>
+                                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="qMj-NH-WBJ"/>
                                                                 </constraints>
                                                                 <color key="tintColor" systemColor="systemGrayColor"/>
                                                                 <state key="normal" title="Button"/>
@@ -185,7 +184,7 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="20" id="9yX-dP-si1"/>
-                                                                    <constraint firstAttribute="width" constant="20" id="pz5-x9-OpX"/>
+                                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="20" id="pz5-x9-OpX"/>
                                                                 </constraints>
                                                                 <color key="tintColor" systemColor="systemGrayColor"/>
                                                                 <state key="normal" title="Button"/>
@@ -197,7 +196,7 @@
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hIx-V3-Tvo">
                                                                 <rect key="frame" x="0.0" y="20" width="20" height="20"/>
                                                                 <constraints>
-                                                                    <constraint firstAttribute="width" constant="20" id="m76-Cn-MhK"/>
+                                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="20" id="m76-Cn-MhK"/>
                                                                     <constraint firstAttribute="height" constant="20" id="x3f-D7-qN8"/>
                                                                 </constraints>
                                                                 <color key="tintColor" systemColor="systemGrayColor"/>
@@ -239,7 +238,7 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="20" id="Xql-vL-bxs"/>
-                                                                    <constraint firstAttribute="width" constant="20" id="hcN-zb-YUH"/>
+                                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="20" id="hcN-zb-YUH"/>
                                                                 </constraints>
                                                                 <color key="tintColor" systemColor="systemGrayColor"/>
                                                                 <state key="normal" title="Button"/>
@@ -252,7 +251,7 @@
                                                                 <rect key="frame" x="0.0" y="20" width="20" height="20"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="20" id="cEd-pt-Ul5"/>
-                                                                    <constraint firstAttribute="width" constant="20" id="qy1-dJ-Gsu"/>
+                                                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="20" id="qy1-dJ-Gsu"/>
                                                                 </constraints>
                                                                 <color key="tintColor" systemColor="systemGrayColor"/>
                                                                 <state key="normal" title="Button"/>
@@ -328,7 +327,7 @@
                                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="2aw-bf-3yQ"/>
-                                            <constraint firstAttribute="width" constant="100" id="wJD-Pf-k1J"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="wJD-Pf-k1J"/>
                                         </constraints>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal" title="Button"/>
@@ -341,7 +340,7 @@
                                         <rect key="frame" x="103" y="0.0" width="100" height="100"/>
                                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="8hO-wp-mUG"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="8hO-wp-mUG"/>
                                             <constraint firstAttribute="height" constant="100" id="cFb-qr-CLv"/>
                                         </constraints>
                                         <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -355,7 +354,7 @@
                                         <rect key="frame" x="206" y="0.0" width="100" height="100"/>
                                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="100" id="CMu-P1-eXp"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="CMu-P1-eXp"/>
                                             <constraint firstAttribute="height" constant="100" id="SLv-tj-EKs"/>
                                         </constraints>
                                         <color key="tintColor" systemColor="labelColor"/>
@@ -370,7 +369,7 @@
                                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="100" id="87D-rc-sqy"/>
-                                            <constraint firstAttribute="width" constant="100" id="KiY-sD-HIr"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="KiY-sD-HIr"/>
                                         </constraints>
                                         <color key="tintColor" systemColor="labelColor"/>
                                         <state key="normal" title="Button"/>
